# nubank

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: python-app.yml
config/: settings.py
controller/: main_controller.py
helper/: data_helper.py
input/: 01.txt
scenarios/Case 0/: response.txt
scenarios/Case 1 + Case 2/: request.txt
scenarios/Case 2/: response.txt
scenarios/Case 3/: response.txt
scenarios/Case 4/: response.txt
scenarios/Case 5/: response.txt
scenarios/Case 6/: response.txt
scenarios/Case 7/: response.txt
scenarios/Case 8/: response.txt
scenarios/Case 9/: response.txt
service/: main_service.py
src/: main.py
src/controllers/: health_controller.py
src/main/: main.py
src/main/config/: Settings.py  TaxConfig.py  tax_config.py
src/main/controller/: HealthController.py
src/main/dto/: OperationDto.py  OperationTaxDto.py  operation_dto.py  operation_tax_dto.py
src/main/enum/: OperationType.py  operation_type_enum.py
src/main/enums/: operation_type_enum.py
src/main/exceptions/: exception.py
src/main/helper/: OperationHelper.py  ValidationHelper.py
src/main/service/: HealthService.py  OperationService.py  TaxService.py  operation_service.py  tax_service.py
src/main/services/: input_service.py  operation_service.py  tax_service.py
src/main/util/: OperationUtil.py  logger.py  operation_util.py
src/main/utils/: operation_util.py  tax_util.py
src/services/: health_service.py
src/test/controller/: HealthControllerTest.py
src/utils/: http_client.py  logger.py
tests/integration/: test_controller_service.py
(+16 files in other folders)
